tests/ui/never_type/defaulted-never-note.nofallback.stderr
error: this function depends on never type fallback being `()`
  --> $DIR/defaulted-never-note.rs:26:1
   |
LL | fn smeg() {
   | ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: ImplementedForUnitButNotNever` will fail
  --> $DIR/defaulted-never-note.rs:30:9
   |
LL |     foo(_x);
   |         ^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     let _x: () = return;
   |           ++++

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: this function depends on never type fallback being `()`
  --> $DIR/defaulted-never-note.rs:26:1
   |
LL | fn smeg() {
   | ^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in Rust 2024 and in a future release in all editions!
   = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/never-type-fallback.html>
   = help: specify the types explicitly
note: in edition 2024, the requirement `!: ImplementedForUnitButNotNever` will fail
  --> $DIR/defaulted-never-note.rs:30:9
   |
LL |     foo(_x);
   |         ^^
   = note: `#[deny(dependency_on_unit_never_type_fallback)]` (part of `#[deny(rust_2024_compatibility)]`) on by default
help: use `()` annotations to avoid fallback changes
   |
LL |     let _x: () = return;
   |           ++++

